check pmd on test