@@ -89,8 +89,8 @@ class CrossrefToSkgIfMapperTest {
         assertEquals("product", product.getEntityType());
         assertEquals(Product.ProductTypeEnum.LITERATURE, product.getProductType());
         assertEquals(1, product.getIdentifiers().size());
-        assertEquals("doi", product.getIdentifiers().get(0).getScheme());
-        assertEquals("10.1038/nature12373", product.getIdentifiers().get(0).getValue());
+        assertEquals("doi", product.getIdentifiers().getFirst().getScheme());
+        assertEquals("10.1038/nature12373", product.getIdentifiers().getFirst().getValue());
     }
 
     @Test
@@ -99,7 +99,7 @@ class CrossrefToSkgIfMapperTest {
         Product product = mapFixture("crossref-journal-article.json");
 
         Map<String, List<String>> titles = (Map<String, List<String>>) product.getTitles();
-        assertTrue(titles.get("en").get(0).contains("Nanometre-scale thermometry"));
+        assertTrue(titles.get("en").getFirst().contains("Nanometre-scale thermometry"));
     }
 
     @Test
@@ -113,7 +113,7 @@ class CrossrefToSkgIfMapperTest {
         Product product = mapFixture("crossref-journal-article.json");
 
         assertFalse(product.getContributions().isEmpty());
-        ProductContribution first = product.getContributions().get(0);
+        ProductContribution first = product.getContributions().getFirst();
         assertEquals(ProductContribution.RoleEnum.AUTHOR, first.getRole());
         assertEquals(1, first.getRank());
         PersonLite by = (PersonLite) first.getBy();
@@ -127,11 +127,11 @@ class CrossrefToSkgIfMapperTest {
     void mapsBiblioFromContainerTitleIssnVolumeIssuePages() throws IOException {
         Product product = mapFixture("crossref-journal-article.json");
 
-        ProductManifestation manifestation = product.getManifestations().get(0);
+        ProductManifestation manifestation = product.getManifestations().getFirst();
         VenueLite in = (VenueLite) manifestation.getBiblio().getIn();
         assertEquals("Nature", in.getName());
-        assertEquals("issn", in.getIdentifiers().get(0).getScheme());
-        assertEquals("0028-0836", in.getIdentifiers().get(0).getValue());
+        assertEquals("issn", in.getIdentifiers().getFirst().getScheme());
+        assertEquals("0028-0836", in.getIdentifiers().getFirst().getValue());
         assertEquals("500", manifestation.getBiblio().getVolume());
         assertEquals("7460", manifestation.getBiblio().getIssue());
         assertEquals("54", manifestation.getBiblio().getPages().getFirst());
@@ -150,15 +150,15 @@ class CrossrefToSkgIfMapperTest {
 
         Product product = mapFixture("crossref-journal-article.json");
 
-        VenueLite venue = (VenueLite) product.getManifestations().get(0).getBiblio().getIn();
+        VenueLite venue = (VenueLite) product.getManifestations().getFirst().getBiblio().getIn();
         assertEquals("Nature", venue.getName());
         assertEquals("https://doi.org/10.1038/41586.1476-4687", venue.getLocalIdentifier());
 
         List<VenueLiteAllOfIdentifiers> identifiers = venue.getIdentifiers();
         final int expectedIdentifierCount = 3;
         assertEquals(expectedIdentifierCount, identifiers.size());
-        assertEquals("doi", identifiers.get(0).getScheme());
-        assertEquals("10.1038/41586.1476-4687", identifiers.get(0).getValue());
+        assertEquals("doi", identifiers.getFirst().getScheme());
+        assertEquals("10.1038/41586.1476-4687", identifiers.getFirst().getValue());
         assertTrue(identifiers.stream()
                 .anyMatch(i -> "issn".equals(i.getScheme()) && "0028-0836".equals(i.getValue())));
         assertTrue(identifiers.stream()
@@ -175,10 +175,10 @@ class CrossrefToSkgIfMapperTest {
 
         Product product = mapFixture("crossref-journal-article.json");
 
-        VenueLite venue = (VenueLite) product.getManifestations().get(0).getBiblio().getIn();
+        VenueLite venue = (VenueLite) product.getManifestations().getFirst().getBiblio().getIn();
         assertTrue(venue.getLocalIdentifier().startsWith("otf___"));
-        assertEquals("issn", venue.getIdentifiers().get(0).getScheme());
-        assertEquals("0028-0836", venue.getIdentifiers().get(0).getValue());
+        assertEquals("issn", venue.getIdentifiers().getFirst().getScheme());
+        assertEquals("0028-0836", venue.getIdentifiers().getFirst().getValue());
     }
 
     private CrossrefWorkListResponse journalDoiLookupResponse(String resourceName) throws IOException {
@@ -223,10 +223,10 @@ class CrossrefToSkgIfMapperTest {
         List<ProductsRelatedCitesInner> isSupplementedBy = product.getRelatedProducts().getIsSupplementedBy();
         final int expectedIsSupplementedByCount = 4;
         assertEquals(expectedIsSupplementedByCount, isSupplementedBy.size());
-        ProductsRelatedItem first = (ProductsRelatedItem) isSupplementedBy.get(0);
+        ProductsRelatedItem first = (ProductsRelatedItem) isSupplementedBy.getFirst();
         assertEquals("https://doi.org/10.1107/S2414314618016334/lh4040sup1.cif", first.getLocalIdentifier());
-        assertEquals("doi", first.getIdentifiers().get(0).getScheme());
-        assertEquals("10.1107/S2414314618016334/lh4040sup1.cif", first.getIdentifiers().get(0).getValue());
+        assertEquals("doi", first.getIdentifiers().getFirst().getScheme());
+        assertEquals("10.1107/S2414314618016334/lh4040sup1.cif", first.getIdentifiers().getFirst().getValue());
 
         // Same fixture also has a normal reference[] - adding is_supplemented_by must not
         // disturb cites.
@@ -239,12 +239,12 @@ class CrossrefToSkgIfMapperTest {
         // Java from the real fixture's own DOI-shaped entry to prove the otf fallback still works.
         CrossrefWork work = readFixture("crossref-journal-article-with-is-supplemented-by.json");
         List<CrossrefIdEntry> supplements = work.relation().get("is-supplemented-by");
-        CrossrefIdEntry original = supplements.get(0);
+        CrossrefIdEntry original = supplements.getFirst();
         supplements.set(0, new CrossrefIdEntry(original.id(), "handle", original.assertedBy()));
 
         Product product = mapper.toProduct(work);
 
-        ProductsRelatedItem item = (ProductsRelatedItem) product.getRelatedProducts().getIsSupplementedBy().get(0);
+        ProductsRelatedItem item = (ProductsRelatedItem) product.getRelatedProducts().getIsSupplementedBy().getFirst();
         assertTrue(item.getLocalIdentifier().startsWith("otf___"));
     }
 
@@ -253,7 +253,7 @@ class CrossrefToSkgIfMapperTest {
         // Crossref has no software-versioning concept - left unset rather than guessed at.
         Product product = mapFixture("crossref-journal-article.json");
 
-        assertNull(product.getManifestations().get(0).getVersion());
+        assertNull(product.getManifestations().getFirst().getVersion());
     }
 
     // crossref-journal-article-with-orcid.json: a real Nature Communications article (DOI
@@ -267,20 +267,20 @@ class CrossrefToSkgIfMapperTest {
 
         assertEquals("https://doi.org/10.1038/s41467-022-33468-6", product.getLocalIdentifier());
         assertEquals(Product.ProductTypeEnum.LITERATURE, product.getProductType());
-        assertEquals("10.1038/s41467-022-33468-6", product.getIdentifiers().get(0).getValue());
+        assertEquals("10.1038/s41467-022-33468-6", product.getIdentifiers().getFirst().getValue());
     }
 
     @Test
     void mapsAuthorsAsAuthorContributionsWithOrcidWhenPresent() throws IOException {
         Product product = mapFixture("crossref-journal-article-with-orcid.json");
 
-        ProductContribution first = product.getContributions().get(0);
+        ProductContribution first = product.getContributions().getFirst();
         PersonLite by = (PersonLite) first.getBy();
         assertEquals("M. C.", by.getGivenName());
         assertEquals("Rahn", by.getFamilyName());
         assertEquals("https://orcid.org/0000-0001-7403-8288", by.getLocalIdentifier());
-        assertEquals("orcid", by.getIdentifiers().get(0).getScheme());
-        assertEquals("0000-0001-7403-8288", by.getIdentifiers().get(0).getValue());
+        assertEquals("orcid", by.getIdentifiers().getFirst().getScheme());
+        assertEquals("0000-0001-7403-8288", by.getIdentifiers().getFirst().getValue());
 
         // This fixture also has authors without an ORCID (e.g. "A. Hariki") interspersed among
         // the ORCID-bearing ones - those must still fall back to an otf id, not be skipped.
@@ -296,7 +296,7 @@ class CrossrefToSkgIfMapperTest {
         // rather than being guessed at, even though issue/volume/venue are all present.
         Product product = mapFixture("crossref-journal-article-with-orcid.json");
 
-        ProductManifestation manifestation = product.getManifestations().get(0);
+        ProductManifestation manifestation = product.getManifestations().getFirst();
         assertNull(manifestation.getBiblio().getPages());
         assertEquals("13", manifestation.getBiblio().getVolume());
         assertEquals("1", manifestation.getBiblio().getIssue());
@@ -314,7 +314,7 @@ class CrossrefToSkgIfMapperTest {
 
         assertEquals("https://doi.org/10.17537/icmbb18.42", product.getLocalIdentifier());
         assertEquals(Product.ProductTypeEnum.LITERATURE, product.getProductType());
-        assertEquals("10.17537/icmbb18.42", product.getIdentifiers().get(0).getValue());
+        assertEquals("10.17537/icmbb18.42", product.getIdentifiers().getFirst().getValue());
     }
 
     @Test
@@ -326,16 +326,16 @@ class CrossrefToSkgIfMapperTest {
         final int expectedCitesCount = 5;
         assertEquals(expectedCitesCount, product.getRelatedProducts().getCites().size());
         assertTrue(product.getRelatedProducts().getCites().stream()
-                .anyMatch(c -> ((ProductsRelatedItem) c).getLocalIdentifier()
-                        .equals("otf___10-17537-icmbb18-42___ref3")));
+                .anyMatch(c -> "otf___10-17537-icmbb18-42___ref3"
+                        .equals(((ProductsRelatedItem) c).getLocalIdentifier())));
     }
 
     @Test
     void doesNotFabricateAccessRightsWhenNoLicensePresent() throws IOException {
         Product product = mapFixture("crossref-proceedings-article.json");
 
-        assertNull(product.getManifestations().get(0).getAccessRights());
-        assertNull(product.getManifestations().get(0).getLicence());
+        assertNull(product.getManifestations().getFirst().getAccessRights());
+        assertNull(product.getManifestations().getFirst().getLicence());
     }
 
     // crossref-journal-article-with-ror-affiliation.json: a real Physical Review B article
@@ -348,17 +348,17 @@ class CrossrefToSkgIfMapperTest {
     void mapsDeclaredAffiliationsWithRorWhenPresent() throws IOException {
         Product product = mapFixture("crossref-journal-article-with-ror-affiliation.json");
 
-        ProductContribution first = product.getContributions().get(0);
+        ProductContribution first = product.getContributions().getFirst();
         assertEquals("di Mauro", ((PersonLite) first.getBy()).getFamilyName());
         // This fixture's authors carry no ORCID at all - only their affiliations carry a ROR -
         // so the person's own local_identifier still falls back to an otf id.
         assertTrue(((PersonLite) first.getBy()).getLocalIdentifier().startsWith("otf___"));
 
-        Organisation affiliation = (Organisation) first.getDeclaredAffiliations().get(0);
+        Organisation affiliation = (Organisation) first.getDeclaredAffiliations().getFirst();
         assertEquals(2, first.getDeclaredAffiliations().size());
         assertEquals("https://ror.org/00tmb7y09", affiliation.getLocalIdentifier());
-        assertEquals("ror", affiliation.getIdentifiers().get(0).getScheme());
-        assertEquals("00tmb7y09", affiliation.getIdentifiers().get(0).getValue());
+        assertEquals("ror", affiliation.getIdentifiers().getFirst().getScheme());
+        assertEquals("00tmb7y09", affiliation.getIdentifiers().getFirst().getValue());
         assertEquals("Laboratoire de Chimie Théorique", affiliation.getName());
     }
 
@@ -380,9 +380,9 @@ class CrossrefToSkgIfMapperTest {
 
         // Unlike crossref-journal-article-with-funder.json's funder (no Funder Registry DOI at
         // all), this fixture's funders carry one directly on the top-level funder[] entry.
-        var fundingAgency = horizon2020Entries.get(0).getFundingAgency();
-        assertEquals("doi", fundingAgency.getIdentifiers().get(0).getScheme());
-        assertEquals("10.13039/501100007601", fundingAgency.getIdentifiers().get(0).getValue());
+        var fundingAgency = horizon2020Entries.getFirst().getFundingAgency();
+        assertEquals("doi", fundingAgency.getIdentifiers().getFirst().getScheme());
+        assertEquals("10.13039/501100007601", fundingAgency.getIdentifiers().getFirst().getValue());
     }
 
     // crossref-book-chapter.json: a real book chapter (DOI 10.1007/978-3-319-66787-4_9,
@@ -396,7 +396,7 @@ class CrossrefToSkgIfMapperTest {
 
         assertEquals("https://doi.org/10.1007/978-3-319-66787-4_9", product.getLocalIdentifier());
         assertEquals(Product.ProductTypeEnum.LITERATURE, product.getProductType());
-        assertEquals("10.1007/978-3-319-66787-4_9", product.getIdentifiers().get(0).getValue());
+        assertEquals("10.1007/978-3-319-66787-4_9", product.getIdentifiers().getFirst().getValue());
     }
 
     @Test
@@ -409,7 +409,7 @@ class CrossrefToSkgIfMapperTest {
         Product product = mapFixture("crossref-book-chapter.json");
 
         assertEquals("Lecture Notes in Computer Science",
-                ((VenueLite) product.getManifestations().get(0).getBiblio().getIn()).getName());
+                ((VenueLite) product.getManifestations().getFirst().getBiblio().getIn()).getName());
     }
 
     @Test
@@ -421,15 +421,15 @@ class CrossrefToSkgIfMapperTest {
         // volume number (absent from this fixture's REST JSON) filling in biblio.volume.
         Product product = mapFixtureWithVenueMetadata("crossref-book-chapter.json", "crossref-book-chapter.xml");
 
-        VenueLite venue = (VenueLite) product.getManifestations().get(0).getBiblio().getIn();
+        VenueLite venue = (VenueLite) product.getManifestations().getFirst().getBiblio().getIn();
         assertEquals("Cryptographic Hardware and Embedded Systems – CHES 2017", venue.getName());
         assertEquals("https://doi.org/10.1007/978-3-319-66787-4", venue.getLocalIdentifier());
 
         List<VenueLiteAllOfIdentifiers> identifiers = venue.getIdentifiers();
         final int expectedIdentifierCount = 5;
         assertEquals(expectedIdentifierCount, identifiers.size());
-        assertEquals("doi", identifiers.get(0).getScheme());
-        assertEquals("10.1007/978-3-319-66787-4", identifiers.get(0).getValue());
+        assertEquals("doi", identifiers.getFirst().getScheme());
+        assertEquals("10.1007/978-3-319-66787-4", identifiers.getFirst().getValue());
         assertTrue(identifiers.stream()
                 .anyMatch(i -> "issn".equals(i.getScheme()) && "0302-9743".equals(i.getValue())));
         assertTrue(identifiers.stream()
@@ -439,7 +439,7 @@ class CrossrefToSkgIfMapperTest {
         assertTrue(identifiers.stream()
                 .anyMatch(i -> "isbn".equals(i.getScheme()) && "978-3-319-66787-4".equals(i.getValue())));
 
-        assertEquals("10529", product.getManifestations().get(0).getBiblio().getVolume());
+        assertEquals("10529", product.getManifestations().getFirst().getBiblio().getVolume());
     }
 
     @Test
@@ -451,22 +451,22 @@ class CrossrefToSkgIfMapperTest {
         Product product = mapFixtureWithVenueMetadata("crossref-book-chapter-standalone.json",
                 "crossref-book-chapter-standalone.xml");
 
-        VenueLite venue = (VenueLite) product.getManifestations().get(0).getBiblio().getIn();
+        VenueLite venue = (VenueLite) product.getManifestations().getFirst().getBiblio().getIn();
         assertEquals("The Definitive Guide to Jakarta Faces in Jakarta EE 10", venue.getName());
         assertEquals("https://doi.org/10.1007/978-1-4842-7310-4", venue.getLocalIdentifier());
 
         List<VenueLiteAllOfIdentifiers> identifiers = venue.getIdentifiers();
         final int expectedIdentifierCount = 3;
         assertEquals(expectedIdentifierCount, identifiers.size());
-        assertEquals("doi", identifiers.get(0).getScheme());
-        assertEquals("10.1007/978-1-4842-7310-4", identifiers.get(0).getValue());
+        assertEquals("doi", identifiers.getFirst().getScheme());
+        assertEquals("10.1007/978-1-4842-7310-4", identifiers.getFirst().getValue());
         assertTrue(identifiers.stream().noneMatch(i -> "issn".equals(i.getScheme())));
         assertTrue(identifiers.stream()
                 .anyMatch(i -> "isbn".equals(i.getScheme()) && "978-1-4842-7309-8".equals(i.getValue())));
         assertTrue(identifiers.stream()
                 .anyMatch(i -> "isbn".equals(i.getScheme()) && "978-1-4842-7310-4".equals(i.getValue())));
 
-        assertNull(product.getManifestations().get(0).getBiblio().getVolume());
+        assertNull(product.getManifestations().getFirst().getBiblio().getVolume());
     }
 
     @Test
@@ -481,7 +481,7 @@ class CrossrefToSkgIfMapperTest {
         Product product = mapFixtureWithVenueMetadata("crossref-proceedings-article-with-series.json",
                 "crossref-proceedings-article-with-series.xml");
 
-        VenueLite venue = (VenueLite) product.getManifestations().get(0).getBiblio().getIn();
+        VenueLite venue = (VenueLite) product.getManifestations().getFirst().getBiblio().getIn();
         assertEquals(
                 "Proceedings of the 4th International Conference on Innovative Research Across Disciplines "
                         + "(ICIRAD 2021)",
@@ -496,7 +496,7 @@ class CrossrefToSkgIfMapperTest {
         assertTrue(identifiers.stream()
                 .anyMatch(i -> "isbn".equals(i.getScheme()) && "978-94-6239-490-2".equals(i.getValue())));
 
-        assertEquals("613", product.getManifestations().get(0).getBiblio().getVolume());
+        assertEquals("613", product.getManifestations().getFirst().getBiblio().getVolume());
     }
 
     @Test
@@ -509,17 +509,17 @@ class CrossrefToSkgIfMapperTest {
         Product product = mapFixtureWithVenueMetadata("crossref-proceedings-article-standalone.json",
                 "crossref-proceedings-article-standalone.xml");
 
-        VenueLite venue = (VenueLite) product.getManifestations().get(0).getBiblio().getIn();
+        VenueLite venue = (VenueLite) product.getManifestations().getFirst().getBiblio().getIn();
         assertEquals("Proceedings of the 1998 IEEE International Frequency Control Symposium (Cat. No.98CH36165)",
                 venue.getName());
         assertTrue(venue.getLocalIdentifier().startsWith("otf___"));
 
         List<VenueLiteAllOfIdentifiers> identifiers = venue.getIdentifiers();
         assertEquals(1, identifiers.size());
-        assertEquals("isbn", identifiers.get(0).getScheme());
-        assertEquals("0-7803-4373-5", identifiers.get(0).getValue());
+        assertEquals("isbn", identifiers.getFirst().getScheme());
+        assertEquals("0-7803-4373-5", identifiers.getFirst().getValue());
 
-        assertNull(product.getManifestations().get(0).getBiblio().getVolume());
+        assertNull(product.getManifestations().getFirst().getBiblio().getVolume());
     }
 
     @Test
@@ -544,7 +544,7 @@ class CrossrefToSkgIfMapperTest {
         Product product = mapFixture("crossref-journal-article-with-funder.json");
 
         Map<String, List<String>> abstracts = (Map<String, List<String>>) product.getAbstracts();
-        String abstractText = abstracts.get("en").get(0);
+        String abstractText = abstracts.get("en").getFirst();
         assertTrue(abstractText.contains("Lissajous scanner"));
         assertFalse(abstractText.contains("<jats:p>"));
     }
@@ -553,7 +553,7 @@ class CrossrefToSkgIfMapperTest {
     void mapsAccessRightsAsOpenFromCreativeCommonsLicence() throws IOException {
         Product product = mapFixture("crossref-journal-article-with-funder.json");
 
-        ProductManifestation manifestation = product.getManifestations().get(0);
+        ProductManifestation manifestation = product.getManifestations().getFirst();
         assertEquals(ProductManifestationAccessRights.StatusEnum.OPEN, manifestation.getAccessRights().getStatus());
         assertTrue(manifestation.getLicence().contains("creativecommons.org"));
     }
@@ -563,7 +563,7 @@ class CrossrefToSkgIfMapperTest {
         Product product = mapFixture("crossref-journal-article-with-funder.json");
 
         assertEquals(1, product.getFunding().size());
-        GrantLite grant = (GrantLite) product.getFunding().get(0);
+        GrantLite grant = (GrantLite) product.getFunding().getFirst();
         assertEquals("Federal Ministries of Transport, Innovation and Technology", grant.getFundingAgency().getName());
         // No Funder Registry DOI on this fixture's funder - local_identifier falls back to otf.
         assertNull(grant.getFundingAgency().getIdentifiers());
@@ -574,9 +574,9 @@ class CrossrefToSkgIfMapperTest {
     void mapsDeclaredAffiliationsWithNameOnlyOtfFallbackWhenNoRor() throws IOException {
         Product product = mapFixture("crossref-journal-article-with-funder.json");
 
-        var affiliations = product.getContributions().get(0).getDeclaredAffiliations();
+        var affiliations = product.getContributions().getFirst().getDeclaredAffiliations();
         assertEquals(1, affiliations.size());
-        Organisation affiliation = (Organisation) affiliations.get(0);
+        Organisation affiliation = (Organisation) affiliations.getFirst();
         // Unlike crossref-journal-article-with-ror-affiliation.json, this affiliation carries no
         // ROR at all - only a bare name - so it must fall back to an otf id instead.
         assertEquals("Carinthian Tech Research AG, Europastrasse 12, 9524 Villach, Austria",
@@ -596,8 +596,8 @@ class CrossrefToSkgIfMapperTest {
         assertEquals("https://doi.org/10.35802/218300", grant.getLocalIdentifier());
         assertEquals("grant", grant.getEntityType().toString());
         assertEquals(1, grant.getIdentifiers().size());
-        assertEquals("doi", grant.getIdentifiers().get(0).getScheme());
-        assertEquals("10.35802/218300", grant.getIdentifiers().get(0).getValue());
+        assertEquals("doi", grant.getIdentifiers().getFirst().getScheme());
+        assertEquals("10.35802/218300", grant.getIdentifiers().getFirst().getValue());
         assertEquals("218300", grant.getGrantNumber());
     }
 
@@ -621,8 +621,8 @@ class CrossrefToSkgIfMapperTest {
         Grant grant = mapGrantFixture("crossref-grant.json");
 
         assertEquals("Wellcome Trust", grant.getFundingAgency().getName());
-        assertEquals("doi", grant.getFundingAgency().getIdentifiers().get(0).getScheme());
-        assertEquals("10.13039/100010269", grant.getFundingAgency().getIdentifiers().get(0).getValue());
+        assertEquals("doi", grant.getFundingAgency().getIdentifiers().getFirst().getScheme());
+        assertEquals("10.13039/100010269", grant.getFundingAgency().getIdentifiers().getFirst().getValue());
         final int expectedFundedAmount = 479450;
         assertEquals(expectedFundedAmount, grant.getFundedAmount());
         assertEquals("GBP", grant.getCurrency());
@@ -642,17 +642,17 @@ class CrossrefToSkgIfMapperTest {
                 .orElseThrow();
         assertEquals(List.of(GrantContribution.RolesEnum.LEAD_APPLICANT), lead.getRoles());
         PersonLite leadBy = (PersonLite) lead.getBy();
-        assertEquals("orcid", leadBy.getIdentifiers().get(0).getScheme());
-        assertEquals("0000-0001-9773-0023", leadBy.getIdentifiers().get(0).getValue());
+        assertEquals("orcid", leadBy.getIdentifiers().getFirst().getScheme());
+        assertEquals("0000-0001-9773-0023", leadBy.getIdentifiers().getFirst().getValue());
 
         GrantContribution coApplicant = (GrantContribution) grant.getContributions().stream()
                 .filter(c -> "Caldas".equals(((PersonLite) ((GrantContribution) c).getBy()).getFamilyName()))
                 .findFirst()
                 .orElseThrow();
         assertEquals(List.of(GrantContribution.RolesEnum.CO_APPLICANT), coApplicant.getRoles());
-        Organisation coApplicantAffiliation = (Organisation) coApplicant.getDeclaredAffiliations().get(0);
-        assertEquals("ror", coApplicantAffiliation.getIdentifiers().get(0).getScheme());
-        assertEquals("013meh722", coApplicantAffiliation.getIdentifiers().get(0).getValue());
+        Organisation coApplicantAffiliation = (Organisation) coApplicant.getDeclaredAffiliations().getFirst();
+        assertEquals("ror", coApplicantAffiliation.getIdentifiers().getFirst().getScheme());
+        assertEquals("013meh722", coApplicantAffiliation.getIdentifiers().getFirst().getValue());
     }
 
     @Test
@@ -681,7 +681,7 @@ class CrossrefToSkgIfMapperTest {
         // updated" - the same field feeds both SKG-IF dates, not just `deposit`.
         Product product = mapFixture("crossref-journal-article.json");
 
-        var dates = product.getManifestations().get(0).getDates();
+        var dates = product.getManifestations().getFirst().getDates();
         assertEquals(List.of("2023-05-18"), dates.getDeposit());
         assertEquals(List.of("2023-05-18"), dates.getModified());
     }
@@ -690,7 +690,7 @@ class CrossrefToSkgIfMapperTest {
     void mapsUpdateToCorrectionAndRetractionDates() throws IOException {
         Product product = mapFixture("crossref-journal-article-with-update-to.json");
 
-        var dates = product.getManifestations().get(0).getDates();
+        var dates = product.getManifestations().getFirst().getDates();
         assertEquals(List.of("2021-03-05"), dates.getCorrection());
         assertEquals(List.of("2022-06-20"), dates.getRetraction());
     }
@@ -702,7 +702,7 @@ class CrossrefToSkgIfMapperTest {
         // value must be ignored rather than guessed at.
         Product product = mapFixture("crossref-journal-article-with-update-to.json");
 
-        var dates = product.getManifestations().get(0).getDates();
+        var dates = product.getManifestations().getFirst().getDates();
         assertEquals(1, dates.getCorrection().size());
         assertEquals(1, dates.getRetraction().size());
     }
